Fixed theme toggle on mobile

--- a/css/light-theme.scss
+++ b/css/light-theme.scss
@@ -33,6 +33,12 @@ body {
     color: white !important;
 }
 
+@media screen and (max-width: 600px) {
+    .theme-toggle {
+      font-size: 16px;
+    }
+  }
+
 .text-responsive {
     font-size: calc(100% + 1.25vw + 2vh);
     text-align: center;
